Update 1161. Maximum Level Sum of a Binary Tree.md

--- a/1161. Maximum Level Sum of a Binary Tree.md
+++ b/1161. Maximum Level Sum of a Binary Tree.md
@@ -10,7 +10,7 @@ How can you sum up the values for every level ?
 Use DFS or BFS to traverse the tree keeping the level of each node, and sum up those values with a map or a frequency array.
 
 
-```
+```python
 # Definition for a binary tree node.
 # class TreeNode:
 #     def __init__(self, val=0, left=None, right=None):
